# github_actions_govtech

./: .gitignore  hello.txt  package-lock.json  package.json  pyproject.toml
.github/workflows/: hello_world.yaml
src/app/components/: main.html
